[package]
name = "common"
version = "0.1.0"
authors = ["Alexis Luengas <al096@hdm-stuttgart.de>"]

[dependencies]
util = {path = "../util"}
wire = {path = "../wire"}
identifiers = {path = "../identifiers"}

yew = { git = "https://github.com/DenisKolodin/yew", rev = "49319b8c02a8eeb15ed4c8a8761f83adcee856b0" }
serde = "1"
serde_derive = "1"
url = "1.7.2"
