[package]
name = "header"
version = "0.1.0"
authors = ["Alexis Luengas <alexis.luengas@gmail.com>"]

[dependencies]
yew = { git = "https://github.com/DenisKolodin/yew", rev = "49319b8c02a8eeb15ed4c8a8761f83adcee856b0" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter" }

stdweb = "0.4"
serde = "1"
serde_derive = "1"
log = "0.4"
failure = "0.1"