[package]
name = "root"
version = "0.1.0"
authors = ["Alexis Luengas <alexis.luengas@gmail.com>"]

[dependencies]
log = "0.4.6"
smart-default = "0.3.0"
url = "1.7.2"

yew = { git = "https://github.com/DenisKolodin/yew", rev = "49319b8c02a8eeb15ed4c8a8761f83adcee856b0" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter" }

common = { path = "../common" }
identifiers = { path = "../identifiers" }
header = { path = "../header" }
header-input = { path = "../header-input" }
tweets = { path = "../tweets" }
