[package]
name = "util"
version = "0.1.0"
authors = ["Alexis Luengas <al096@hdm-stuttgart.de>", "Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
log = "0.4"
failure = "0.1"
failure_derive = "0.1.5"
serde = "1.0.84"
serde_derive = "1.0.84"
serde-value = "0.5.3"
serde_json = "1.0.35"
smart-default = "0.3.0"
base64 = "0.10.0"
stdweb = "0.4.13"
yew = { git = "https://github.com/DenisKolodin/yew", rev = "49319b8c02a8eeb15ed4c8a8761f83adcee856b0" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter" }

identifiers = {path = "../identifiers"}
wire = {path = "../wire"}

[dependencies.chrono]
version = "0.4"
default-features = false

[features]
default = ["development"]
development = []